# pastafarian

./: Makefile  README.md  fsm.py  pyproject.toml
.github/workflows/: tests.yml
src/pastafarian/: __init__.py  _fsm.py  _regex.py  _util.py
tests/: test_regex.py
